# xiswalker-automation

./: .gitignore  LICENSE  README.md  USAGE.md  build.py  pyproject.toml
config/: config.example.yaml
missions/: README.md
missions/composite/: demo_composite.yaml
tests/: test_config.py  test_models.py  test_ocr.py  test_phase7.py  test_phase8.py  test_safety.py  test_scheduler.py  test_timer_parser.py  test_visual.py
xiswalker/: __init__.py  __main__.py  cli.py  config.py  executor.py  importer.py  mcp_server.py  models.py  ocr.py  overlay.py  player.py  recorder.py  safety.py  scheduler.py  stats.py  timer_parser.py  utilities.py  visual.py
xiswalker/gui/: __init__.py  app.py  components.py  composer.py  config_tab.py  dashboard.py  ocr_step_dialog.py  ocr_timer_dialog.py  recorder.py  scheduler_tab.py  stats.py  template_manager.py  visual_step_dialog.py
